# 08_philosophers

./: 2.txt  CMakeLists.txt  Makefile  README.md  main.c  philo.c  philo.h
philo.dSYM/Contents/Resources/DWARF/: philo
src_philo/: ft_atoi.c  ft_check.c  ft_check_living.c  ft_cycle.c  ft_dinner.c  ft_if_alive.c  ft_print_error.c  ft_process_threads.c  ft_read_args.c  ft_simulation.c  ft_time.c
